feat: creeate header style

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,5 +1,6 @@
-$principalFont: #323351;
+$principalColor: #323351;
 $white: #FFFFFF;
+$desfokecWhite: rgba(255, 255, 255, 0.09);
 $orange: #F5643D;
 $beige: #F9F0EE;
 $lightBlue: #48C7F3;
