--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -1,9 +1,13 @@
 @import "./variables.scss";
+@import "./components/header.scss";
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html, body {
   width: 100%;
   height: 100%;
-  padding: 0;
-  width: 0;
 }
