--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -1,5 +1,6 @@
 @import "./variables.scss";
 @import "./components/header.scss";
+@import "./components/header-product.scss";
 
 * {
   box-sizing: border-box;
