feat: initail styles

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -2,5 +2,5 @@ $principalColor: #323351;
 $white: #FFFFFF;
 $desfokecWhite: rgba(255, 255, 255, 0.09);
 $orange: #F5643D;
-$beige: #F9F0EE;
+$beige: rgba(249, 240, 238, 1);
 $lightBlue: #48C7F3;
