--- a/client/src/styles/components/header-product.scss
+++ b/client/src/styles/components/header-product.scss
@@ -48,10 +48,37 @@
     }
   }
 
-  @media (max-width: 750px) {
+  @media (max-width: 900px) {
     height: 450px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    & .options-card {
+      margin: 0 2vw;
+  
+      & .options {
+        width: 18.5vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    
+        & p {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-bottom: 1.6vh;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 18px;
+    
+          & img {
+            margin-right: 2px;
+          }
+        }
+      }
+    }
   }
 }
