--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 @import "./components/header.scss";
 @import "./components/header-product.scss";
+@import "./components//header-mobile.scss";
 
 * {
   box-sizing: border-box;
@@ -11,4 +12,19 @@
 html, body {
   width: 100%;
   height: 100%;
+
+  & .header-mobile {
+    display: none;
+  }
+
+  @media (max-width: 900px) {
+    & .header {
+      display: none;
+    }
+
+    & .header-mobile {
+      display: flex;
+    }
+  }
+
 }
