feta: add some style

--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -2,6 +2,8 @@
 @import "./components/header.scss";
 @import "./components/header-product.scss";
 @import "./components//header-mobile.scss";
+@import "./components/options-card.scss";
+@import "./components/products-cards.scss";
 
 * {
   box-sizing: border-box;
